# seggpt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
config/: phase0_driver.yaml
doc/: README.ja.md  README.zh-CN.md  README.zh-TW.md  phase0-iron-beam-test.md  phase0-runbook.md  phase0-test-flow.md
doc/changelog/: CHANGELOG.md
doc/test/: TEST.md
docker/: .gitignore  Dockerfile  README.md  setup.conf.local
docker/.base/.github/workflows/: self-test.yaml
docker/.base/script/docker/: setup.sh
docker/.base/test/unit/: run_sh_spec.bats  self_test_yaml_spec.bats
docker/config/docker/: setup.conf
docker/doc/: README.ja.md
docker/doc/changelog/: CHANGELOG.md
docker/doc/test/: TEST.md
docker/script/: entrypoint.sh
docker/template/: .hadolint.yaml
docker/template/doc/changelog/: CHANGELOG.md
docker/template/doc/test/: TEST.md
docker/template/script/docker/: exec.sh  run.sh
docker/template/test/unit/: exec_sh_spec.bats  setup_spec.bats  stop_sh_spec.bats
docker/test/smoke/: seggpt_env.bats
model/: README.md  seggpt_vit_large.yaml
script/docker/: stop.sh
scripts/: phase0.py  phase0_driver.py
src/runtime/: __init__.py
src/seggpt/: __init__.py
src/seggpt/api/: __init__.py  backend.py
src/seggpt/runtime/services/: __init__.py  abstract_service.py  import_modules.py  import_self.py  seggpt_model.py  (+2 more)
src/server/: __init__.py
test/: conftest.py
test/integration/runtime/: test_seggpt_backend_e2e.py
test/unit/: template_spec.bats
test/unit/api/: test_backend.py
test/unit/scripts/: test_phase0_driver.py
(+15 files in other folders)
